[package]
name = "Mirror-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
kcp2k_rust = { path = "src/mirror/transports/kcp2k/kcp2k-rust" }
serde = { version = "1.0.214", features = ["derive"] }
nalgebra = "0.33.2"
dashmap = "6.1.0"
tklog = "0.2.4"
serde_json = "1.0.132"
atomic = "0.6"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.13"
rust_decimal = "1.36.0"
half = "2.4.1"
rand = "0.9.0-alpha.2"
ordered-float = "4.5.0"

[profile.dev]
opt-level = 0      # 优化级别
debug = false       # 开启调试信息
overflow-checks = true
