[package]
name = "mirror_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
kcp2k_rust = { git = "https://github.com/xtjsk/kcp2k-rust.git" }
bytes = "1.9.0"
serde = { version = "1.0.215", features = ["derive"] }
nalgebra = "0.33.2"
dashmap = "6.1.0"
tklog = "0.2.7"
atomic = "0.6.0"
lazy_static = "1.5.0"
rust_decimal = "1.36.0"
half = "2.4.1"
rand = "0.9.0-beta.1"
ordered-float = "4.5.0"
# 0.13.4 之后的版本会导致 serde_json 无法正确解析
config = "0.13.4"
notify = "7.0.0"
serde_json = "1.0.133"
serde_repr = "0.1.19"
